--- a/Web.config
+++ b/Web.config
@@ -4,6 +4,12 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	
+	<!--Connection String:-->
+	<connectionStrings>
+		<add name="JobDelta_Data" connectionString="Data Source=.\SQLEXPRESS; AttachDbFilename=|DataDirectory|JobDelta_Data.mdf; Initial Catalog=JobDelta; Integrated Security=True" providerName="System.Data.SqlClient" />
+	</connectionStrings>
+	
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
