Change database server
Change database server from SQLEXPRESS to MSSQLLOCALDB for increased portability + change favicon.ico

--- a/.gitignore
+++ b/.gitignore
@@ -263,9 +263,9 @@ ServiceFabricBackup/
 
 # SQL Server files
 *.mdf
-!JobDelta_Data.mdf
+!JobDeltaDB.mdf
 *.ldf
-!JobDelta_Log.ldf
+!JobDeltaDBLog.ldf
 *.ndf
 
 # Business Intelligence projects
