--- a/Web.config
+++ b/Web.config
@@ -7,7 +7,7 @@
 	
 	<!--Connection String:-->
 	<connectionStrings>
-		<add name="JobDelta_Data" connectionString="Data Source=.\SQLEXPRESS; AttachDbFilename=|DataDirectory|JobDelta_Data.mdf; Initial Catalog=JobDelta; Integrated Security=True" providerName="System.Data.SqlClient" />
+	    <add name="JobDeltaDB" connectionString="Server=(localdb)\mssqllocaldb; AttachDbFileName=|DataDirectory|JobDeltaDB.mdf; Initial Catalog=JobDeltaDB; Integrated Security=true; Trusted_Connection=True; MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />	
 	</connectionStrings>
 	
   <system.web>
