--- a/Web.config
+++ b/Web.config
@@ -7,7 +7,7 @@
 	
 	<!--Connection String:-->
 	<connectionStrings>
-	    <add name="JobDeltaDB" connectionString="Server=(localdb)\mssqllocaldb; AttachDbFileName=|DataDirectory|JobDeltaDB.mdf; Initial Catalog=JobDeltaDB; Integrated Security=true; Trusted_Connection=True; MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />	
+	    <add name="JobDeltaDB" connectionString="Server=(localdb)\mssqllocaldb; AttachDBFilename=|DataDirectory|JobDeltaDB.mdf; Database=JobDeltaDB; Trusted_Connection=true; MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />	
 	</connectionStrings>
 	
   <system.web>
