--- a/JobDelta.csproj
+++ b/JobDelta.csproj
@@ -112,6 +112,7 @@
     <Content Include="App_Data\storedprocs.sql" />
     <Content Include="A_DashBoard.aspx" />
     <Content Include="Contact.aspx" />
+    <Content Include="ContactUs.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-grid.rtl.css" />
@@ -140,6 +141,7 @@
     <Content Include="MyProfile.aspx" />
     <Content Include="Resources\CSS\About_Us.css" />
     <Content Include="Resources\CSS\A_DashBoard.css" />
+    <Content Include="Resources\CSS\ContactUs.css" />
     <Content Include="Resources\CSS\C_DashBoard.css" />
     <Content Include="Resources\CSS\FAQs.css" />
     <Content Include="Resources\CSS\FeedBack.css" />
@@ -259,6 +261,13 @@
     </Compile>
     <Compile Include="Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ContactUs.aspx.cs">
+      <DependentUpon>ContactUs.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ContactUs.aspx.designer.cs">
+      <DependentUpon>ContactUs.aspx</DependentUpon>
     </Compile>
     <Compile Include="C_DashBoard.aspx.cs">
       <DependentUpon>C_DashBoard.aspx</DependentUpon>
