--- a/JobDelta.csproj
+++ b/JobDelta.csproj
@@ -136,6 +136,7 @@
     <Content Include="F_DashBoard.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Homepage.aspx" />
+    <Content Include="JobDetail.aspx" />
     <Content Include="MyProfile.aspx" />
     <Content Include="Resources\CSS\About_Us.css" />
     <Content Include="Resources\CSS\A_DashBoard.css" />
@@ -147,6 +148,7 @@
     <Content Include="Resources\CSS\HomePage.css" />
     <Content Include="How_it_works.aspx" />
     <Content Include="Resources\CSS\How it Works.css" />
+    <Content Include="Resources\CSS\JobDetail.css" />
     <Content Include="Resources\CSS\Master1.css" />
     <Content Include="Resources\CSS\Master2.css" />
     <Content Include="Resources\CSS\MyProfile.css" />
@@ -312,6 +314,13 @@
     </Compile>
     <Compile Include="Homepage.aspx.designer.cs">
       <DependentUpon>Homepage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="JobDetail.aspx.cs">
+      <DependentUpon>JobDetail.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="JobDetail.aspx.designer.cs">
+      <DependentUpon>JobDetail.aspx</DependentUpon>
     </Compile>
     <Compile Include="MyMaster1.Master.cs">
       <DependentUpon>MyMaster1.Master</DependentUpon>
