--- a/JobDelta.csproj
+++ b/JobDelta.csproj
@@ -109,6 +109,7 @@
     <Content Include="App_Data\schema.sql" />
     <Content Include="App_Data\storedprocs.sql" />
     <Content Include="A_DashBoard.aspx" />
+    <Content Include="Complete_Profile.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="ContactUs.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
@@ -138,6 +139,8 @@
     <Content Include="Homepage.aspx" />
     <Content Include="JobDetail.aspx" />
     <Content Include="MyProfile.aspx" />
+    <Content Include="NewsFeed.aspx" />
+    <Content Include="Our_Services.aspx" />
     <Content Include="Resources\CSS\About_Us.css" />
     <Content Include="Resources\CSS\A_DashBoard.css" />
     <Content Include="Resources\CSS\ContactUs.css" />
@@ -152,6 +155,8 @@
     <Content Include="Resources\CSS\Master1.css" />
     <Content Include="Resources\CSS\Master2.css" />
     <Content Include="Resources\CSS\MyProfile.css" />
+    <Content Include="Resources\CSS\NewsFeed.css" />
+    <Content Include="Resources\CSS\Search.css" />
     <Content Include="Resources\CSS\Wallet.css" />
     <Content Include="Resources\Images\asad.png" />
     <Content Include="Resources\Images\me.jpg" />
@@ -162,6 +167,8 @@
     <Content Include="Resources\Images\office3.jpg" />
     <Content Include="Resources\Images\sultan.png" />
     <Content Include="Resources\JavaScript\A_DashBoard.js" />
+    <Content Include="Resources\CSS\Complete_Profile.css" />
+    <Content Include="Resources\JavaScript\Complete profile.js" />
     <Content Include="Resources\JavaScript\C_Dashboard.js" />
     <Content Include="Resources\JavaScript\FAQs.js" />
     <Content Include="Resources\JavaScript\F_DashBoard.js" />
@@ -224,6 +231,7 @@
     <Content Include="Scripts\WebForms\WebForms.js" />
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
+    <Content Include="Search.aspx" />
     <Content Include="Site.Master" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Wallet.aspx" />
@@ -254,6 +262,13 @@
     </Compile>
     <Compile Include="A_DashBoard.aspx.designer.cs">
       <DependentUpon>A_DashBoard.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Complete_Profile.aspx.cs">
+      <DependentUpon>Complete_Profile.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Complete_Profile.aspx.designer.cs">
+      <DependentUpon>Complete_Profile.aspx</DependentUpon>
     </Compile>
     <Compile Include="Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
@@ -343,6 +358,20 @@
     <Compile Include="MyProfile.aspx.designer.cs">
       <DependentUpon>MyProfile.aspx</DependentUpon>
     </Compile>
+    <Compile Include="NewsFeed.aspx.cs">
+      <DependentUpon>NewsFeed.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="NewsFeed.aspx.designer.cs">
+      <DependentUpon>NewsFeed.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Our_Services.aspx.cs">
+      <DependentUpon>Our_Services.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Our_Services.aspx.designer.cs">
+      <DependentUpon>Our_Services.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="How_it_works.aspx.cs">
       <DependentUpon>How_it_works.aspx</DependentUpon>
@@ -350,6 +379,13 @@
     </Compile>
     <Compile Include="How_it_works.aspx.designer.cs">
       <DependentUpon>How_it_works.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Search.aspx.cs">
+      <DependentUpon>Search.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Search.aspx.designer.cs">
+      <DependentUpon>Search.aspx</DependentUpon>
     </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
