--- a/JobDelta.csproj
+++ b/JobDelta.csproj
@@ -138,9 +138,11 @@
     <Content Include="Global.asax" />
     <Content Include="Homepage.aspx" />
     <Content Include="JobDetail.aspx" />
+    <Content Include="Job_Categories.aspx" />
     <Content Include="MyProfile.aspx" />
     <Content Include="NewsFeed.aspx" />
     <Content Include="Our_Services.aspx" />
+    <Content Include="Privacy_Policy.aspx" />
     <Content Include="Resources\CSS\About_Us.css" />
     <Content Include="Resources\CSS\A_DashBoard.css" />
     <Content Include="Resources\CSS\ContactUs.css" />
@@ -152,6 +154,7 @@
     <Content Include="How_it_works.aspx" />
     <Content Include="Resources\CSS\How it Works.css" />
     <Content Include="Resources\CSS\JobDetail.css" />
+    <Content Include="Resources\CSS\Job_Categories.css" />
     <Content Include="Resources\CSS\Master1.css" />
     <Content Include="Resources\CSS\Master2.css" />
     <Content Include="Resources\CSS\MyProfile.css" />
@@ -172,6 +175,7 @@
     <Content Include="Resources\JavaScript\C_Dashboard.js" />
     <Content Include="Resources\JavaScript\FAQs.js" />
     <Content Include="Resources\JavaScript\F_DashBoard.js" />
+    <Content Include="Resources\JavaScript\Job_Categories.js" />
     <Content Include="Resources\JavaScript\MyProfile.js" />
     <Content Include="Resources\JavaScript\Wallet.js" />
     <Content Include="Scripts\bootstrap.bundle.js" />
@@ -337,6 +341,13 @@
     <Compile Include="JobDetail.aspx.designer.cs">
       <DependentUpon>JobDetail.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Job_Categories.aspx.cs">
+      <DependentUpon>Job_Categories.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Job_Categories.aspx.designer.cs">
+      <DependentUpon>Job_Categories.aspx</DependentUpon>
+    </Compile>
     <Compile Include="MyMaster1.Master.cs">
       <DependentUpon>MyMaster1.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -371,6 +382,13 @@
     </Compile>
     <Compile Include="Our_Services.aspx.designer.cs">
       <DependentUpon>Our_Services.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Privacy_Policy.aspx.cs">
+      <DependentUpon>Privacy_Policy.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Privacy_Policy.aspx.designer.cs">
+      <DependentUpon>Privacy_Policy.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="How_it_works.aspx.cs">
