--- a/JobDelta.csproj
+++ b/JobDelta.csproj
@@ -13286,6 +13286,7 @@
     <Content Include="Global.asax" />
     <Content Include="Homepage.aspx" />
     <Content Include="JobDetail.aspx" />
+    <Content Include="JobDetail_C.aspx" />
     <Content Include="JobDetail_F.aspx" />
     <Content Include="Job_Categories.aspx" />
     <Content Include="MyProfile.aspx" />
@@ -15657,6 +15658,13 @@
     </Compile>
     <Compile Include="JobDetail.aspx.designer.cs">
       <DependentUpon>JobDetail.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="JobDetail_C.aspx.cs">
+      <DependentUpon>JobDetail_C.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="JobDetail_C.aspx.designer.cs">
+      <DependentUpon>JobDetail_C.aspx</DependentUpon>
     </Compile>
     <Compile Include="JobDetail_F.aspx.cs">
       <DependentUpon>JobDetail_F.aspx</DependentUpon>
