--- a/Web.config
+++ b/Web.config
@@ -11,7 +11,7 @@
 	</connectionStrings>
 	
   <system.web>
-    <compilation debug="true" targetFramework="4.8" />
+    <compilation debug="true" batch ="false" optimizeCompilations="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
     <pages>
       <namespaces>
