--- a/JobDelta.csproj
+++ b/JobDelta.csproj
@@ -108,6 +108,7 @@
     <Content Include="App_Data\JobDeltaDB.mdf" />
     <Content Include="App_Data\JobDeltaDBLog.ldf" />
     <Content Include="App_Data\schema.sql" />
+    <Content Include="App_Data\SQLQuery2.sql" />
     <Content Include="App_Data\Sultan_Proceduers.sql" />
     <Content Include="App_Data\storedprocs.sql" />
     <Content Include="A_DashBoard.aspx" />
@@ -13634,7 +13635,6 @@
     <Content Include="chat-api-project\frontend\src\assets\react.svg" />
     <Content Include="chat-api-project\frontend\src\AuthPage.jsx" />
     <Content Include="chat-api-project\frontend\src\ChatsPage.jsx" />
-    <Content Include="chat-api-project\frontend\src\chat_App.jsx" />
     <Content Include="chat-api-project\frontend\src\main.jsx" />
     <Content Include="chat-api-project\frontend\vite.config.js" />
     <Content Include="Complete_Profile.aspx" />
