--- a/Web.config
+++ b/Web.config
@@ -12,7 +12,7 @@
 	
   <system.web>
     <compilation debug="true" batch ="false" optimizeCompilations="true" targetFramework="4.8" />
-    <httpRuntime targetFramework="4.8" />
+    <httpRuntime targetFramework="4.8" maxRequestLength="1048576" /><!--increase request limit-->
     <pages>
       <namespaces>
         <add namespace="System.Web.Optimization" />
