--- a/JobDelta.csproj
+++ b/JobDelta.csproj
@@ -13674,7 +13674,7 @@
     <Content Include="Our_Services.aspx" />
     <Content Include="Privacy_Policy.aspx" />
     <Content Include="Resources\CSS\About_Us.css" />
-    <Content Include="Resources\CSS\A_DashBoard.css" />
+    <Content Include="Resources\CSS\A_DashBoarB.css" />
     <Content Include="Resources\CSS\ContactUs.css" />
     <Content Include="Resources\CSS\C_DashBoard.css" />
     <Content Include="Resources\CSS\FAQs.css" />
