--- a/JobDelta.csproj
+++ b/JobDelta.csproj
@@ -105,11 +105,10 @@
   <ItemGroup>
     <Content Include="About.aspx" />
     <Content Include="About_Us.aspx" />
+    <Content Include="App_Data\Final.sql" />
     <Content Include="App_Data\JobDeltaDB.mdf" />
     <Content Include="App_Data\JobDeltaDBLog.ldf" />
     <Content Include="App_Data\schema.sql" />
-    <Content Include="App_Data\SQLQuery2.sql" />
-    <Content Include="App_Data\Sultan_Proceduers.sql" />
     <Content Include="App_Data\storedprocs.sql" />
     <Content Include="A_DashBoard.aspx" />
     <Content Include="chat-api-project\backend\index.js" />
